# mir

./: README.md
data/: README.md
src/ConvNet/: CMakeLists.txt  readme.md
src/ConvNet/cmake/: FindTinyXML2.cmake  LICENSE.BSD  buildPtxResource.sh  buildRawResource.sh
src/ConvNet/executables/AndysSandbox/: CMakeLists.txt
src/ConvNet/executables/AndysSandbox/source/: HistogramDataSource.cpp  HistogramDataSource.h  ImageClassificationMatrixPlots.cpp  ImageClassificationMatrixPlots.h  ViewRecallMatchingHistogramTripletLossCrossVal.cpp  ViewRecallMatchingHistogramTripletLossCrossVal.h  ViewRecallMatchingHistogramTripletLossCrossValIndividual.cpp  ViewRecallMatchingHistogramTripletLossCrossValIndividual.h  ViewRecallMatchingHistogramTripletLossExportDescriptors.cpp  ViewRecallMatchingHistogramTripletLossExportDescriptors.h  main.cpp
src/ConvNet/libs/Convnet/: CMakeLists.txt
src/ConvNet/libs/Convnet/data/reporting/css/: style.css
src/ConvNet/libs/Convnet/data/reporting/js/: utils.js
src/ConvNet/libs/Convnet/source/convnet/: Blobb.cpp  Blobb.h  Convnet.cpp  Convnet.h  ExecutionStream.cpp  ExecutionStream.h  ExecutionWorkspace.cpp  ExecutionWorkspace.h  FileBlob.cpp  FileBlob.h  FilterRenderer.cpp  FilterRenderer.h  NetworkState.cpp  NetworkState.h  Tensor.cpp  Tensor.h
src/ConvNet/libs/Convnet/source/convnet/backend/: ConvNetImpl_cudnn.cpp  ConvNetImpl_cudnn.h  CuDnnWrapper.cpp  CuDnnWrapper.h  CudnnAuxKernels.cpp  CudnnAuxKernels.h  ExecutionStreamImpl_cudnn.cpp  ExecutionStreamImpl_cudnn.h  ExecutionWorkspaceImpl_cudnn.cpp  ExecutionWorkspaceImpl_cudnn.h  PinnedMemoryAllocator_cudnn.cpp  PinnedMemoryAllocator_cudnn.h  TensorImpl_cudnn.cpp  TensorImpl_cudnn.h
src/ConvNet/libs/Convnet/source/convnet/backend/cudaKernels/: AdamKernel.cu  AdamKernel.h  ConvnetKernelModule.cu  CrossEntropyLossKernel.cu  CrossEntropyLossKernel.h  MiscKernel.cu  MiscKernel.h  StridedCopyKernel.cu  StridedCopyKernel.h  StridedMemsetKernel.cu  StridedMemsetKernel.h  TripletLossKernel.cu  TripletLossKernel.h
src/ConvNet/libs/Convnet/source/convnet/backend/cudnn/: CuDnnActivationDescriptor.cpp  CuDnnActivationDescriptor.h  CuDnnContext.cpp  CuDnnContext.h  CuDnnConvolutionDescriptor.cpp  CuDnnConvolutionDescriptor.h  CuDnnDropoutDescriptor.cpp  CuDnnDropoutDescriptor.h  CuDnnError.cpp  CuDnnError.h  CuDnnFilterDescriptor.cpp  CuDnnFilterDescriptor.h  CuDnnLRNDescriptor.cpp  CuDnnLRNDescriptor.h  CuDnnPoolingDescriptor.cpp  CuDnnPoolingDescriptor.h  CuDnnTensorDescriptor.cpp  CuDnnTensorDescriptor.h
src/ConvNet/libs/Convnet/source/convnet/backend/layers/: BatchNormLayerImpl_cudnn.cpp  BatchNormLayerImpl_cudnn.h  ConvolutionLayerImpl_cudnn.cpp  ConvolutionLayerImpl_cudnn.h  CrossEntropyLossLayerImpl_cudnn.cpp  CrossEntropyLossLayerImpl_cudnn.h  DropoutLayerImpl_cudnn.cpp  DropoutLayerImpl_cudnn.h  InputLayerImpl_cudnn.cpp  InputLayerImpl_cudnn.h  PoolingLayerImpl_cudnn.cpp  PoolingLayerImpl_cudnn.h  ReluLayerImpl_cudnn.cpp  ReluLayerImpl_cudnn.h  TripletLossLayerImpl_cudnn.cpp  TripletLossLayerImpl_cudnn.h
src/ConvNet/libs/Convnet/source/convnet/layers/: BatchNormLayer.cpp  BatchNormLayer.h  ConvolutionLayer.cpp  ConvolutionLayer.h  CrossEntropyLossLayer.cpp  CrossEntropyLossLayer.h  DropoutLayer.cpp  DropoutLayer.h  InputLayer.cpp  InputLayer.h  Layer.cpp  Layer.h  PoolingLayer.cpp  PoolingLayer.h  ReluLayer.cpp  ReluLayer.h  TripletLossLayer.cpp  TripletLossLayer.h
src/ConvNet/libs/Convnet/source/convnet/reporting/: HTTPReport.cpp  HTTPReport.h  State2Html.cpp  State2Html.h  TensorRenderer.cpp  TensorRenderer.h
src/ConvNet/libs/Convnet/source/convnet/training/: ClassificationTrainer.cpp  ClassificationTrainer.h  StreamingTrainingDataSource.cpp  StreamingTrainingDataSource.h  Trainer.cpp  Trainer.h  TrainingDataSource.cpp  TrainingDataSource.h  WholeImageClassificationTrainer.cpp  WholeImageClassificationTrainer.h
src/ConvNet/libs/Convnet/unitTests/: CMakeLists.txt
src/ConvNet/libs/Convnet/unitTests/source/: LayerTest.cpp  LayerTest.h  testConvNetImplCudnn.cpp
src/ConvNet/libs/common/: CMakeLists.txt
src/ConvNet/libs/common/source/tools/: BinaryFStream.cpp  BinaryFStream.h  CPUStopWatch.cpp  CPUStopWatch.h  ChunkedArray.hpp  HalfFloat.hpp  RasterImage.cpp  RasterImage.h  RefCountPtr.hpp  StackTrace.cpp  StackTrace.h  SvgComposer.cpp  SvgComposer.h  TaskScheduler.cpp  TaskScheduler.h  misc.h
src/ConvNet/libs/cudaUtilities/: CMakeLists.txt
src/ConvNet/libs/cudaUtilities/source/cudaUtils/: CudaBaseMemoryChunk.cpp  CudaBaseMemoryChunk.h  CudaCodeModule.cpp  CudaCodeModule.h  CudaDevice.cpp  CudaDevice.h  CudaDeviceContext.cpp  CudaDeviceContext.h  CudaDeviceMemory.cpp  CudaDeviceMemory.h  CudaDriver.cpp  CudaDriver.h  CudaFence.cpp  CudaFence.h  CudaKernel.cpp  CudaKernel.h  CudaPinnedHostMemory.cpp  CudaPinnedHostMemory.h  CudaProfilingScope.cpp  CudaProfilingScope.h  CudaStream.cpp  CudaStream.h
src/ConvNet/libs/eyeTracking/: CMakeLists.txt
src/ConvNet/libs/eyeTracking/source/eyeTracking/: Dataset.cpp  Dataset.h  EyeMovement.cpp  EyeMovement.h  TestSubject.cpp  TestSubject.h
src/distance-based/: main.py
src/distance-based/rep/: __init__.py  hist.py
src/distance-based/utils/: __init__.py  plotROC.py
